ASSIGNED173035
Contiguous storage butterfly length should not exceed MAX_STORAGE_VECTOR_LENGTH.
https://bugs.webkit.org/show_bug.cgi?id=173035
Summary Contiguous storage butterfly length should not exceed MAX_STORAGE_VECTOR_LENGTH.
Mark Lam
Reported 2017-06-06 14:34:22 PDT
Attachments
proposed patch. (8.67 KB, patch)
2017-06-06 15:23 PDT, Mark Lam
ggaren: review+
Mark Lam
Comment 1 2017-06-06 15:23:36 PDT
Created attachment 312130 [details] proposed patch.
Geoffrey Garen
Comment 2 2017-06-06 15:29:08 PDT
Comment on attachment 312130 [details] proposed patch. r=me
Filip Pizlo
Comment 3 2017-06-06 15:38:46 PDT
Comment on attachment 312130 [details] proposed patch. r=me too!
Mark Lam
Comment 4 2017-06-06 17:29:23 PDT
Thanks for the reviews. Landed in r217869: <http://trac.webkit.org/r217869>.
Note You need to log in before you can comment on or make changes to this bug.